--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "" # the base hostname & protocol for your site
 google_analytics: UA-79512767-1 #your GA unique id, e.g. UA-xxxxxxxx-x
 duoshuo_username: shizhiwen #Your duoshuo_username to add comments on the post
 disqus_username:  #Your disqus_username shizhige to add comments on the post
-qiniu: http://shiwen-blog.qiniudn.com
+image: http://shiwen-blog.qiniudn.com # image space
 # Build settings 
 markdown: kramdown
 
