--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ gitalk:
   clientSecret: '4d16fd8389ce5b7be7fd8b611005ab9f1b77da92'   #同上
   repo: 'ishizhiwen.github.com'   #仓库名称
   owner: 'ishizhiwen'    #github用户名
-  admin: 'ishizhiwen'
+  admin: 'shizhiwen'
   distractionFreeMode: true
 #coding_comments:
 #  owner: #'shizhiwen'
